FEAT: mobile corrections

--- a/src/checkout/styles/_checkout.scss
+++ b/src/checkout/styles/_checkout.scss
@@ -445,6 +445,11 @@ h2{
 
         .checkout-internal-container{
             width: 100%;
+            .next-step-button{
+           
+                height: 6vh;
+              
+            }
           
         
             form{
