--- a/src/ui/styles/_shopingCart.scss
+++ b/src/ui/styles/_shopingCart.scss
@@ -174,6 +174,7 @@
       border: none;
       padding-top: 4%;
       padding-bottom: 4%;
+      font-size: 1.5rem;
       font-weight: 600;
       border-radius: 6px;
     }
