--- a/src/ui/styles/_footer.scss
+++ b/src/ui/styles/_footer.scss
@@ -337,17 +337,17 @@ footer{
                   
                 }
                 .fotter-info-container{
-                    width: fit-content;
+                    width: 100%;
                     height: 40%;
                     display: flex;
                     flex-direction: column;
                     justify-content: center;
-                    align-items: start;
+                    align-items: center;
                     row-gap: 12%;
                     
                     .info-container-item{
-                        height: 15%;
-                        width: 100%;
+                        height: 12%;
+                        width: 90%;
                         display: flex;
                         align-items: center;
                         column-gap: 1.6rem;
@@ -372,8 +372,9 @@ footer{
            
             .fotter-socialMedia-container{
                 margin-top: 5%;
-                width: 50%;
-                height: 12%;
+                width: 18%;
+                height: auto;
+                aspect-ratio: 1;
                 display: flex;
                 justify-content: center;
                 column-gap: 3vw;
@@ -390,7 +391,7 @@ footer{
         .footer-bottom-container{
             position: relative;
             width: 100%;
-            height: 20%;
+            height: 18%;
 
             display: flex;
            flex-direction: column;
@@ -403,8 +404,8 @@ footer{
             .zm-container{
                
               position: absolute;
-              bottom: 5%;
-              right: 2%;
+              bottom: 6%;
+              right: auto;
                 display: flex;
                 height: 20%;
                 align-items: center;
