--- a/src/ui/styles/_footer.scss
+++ b/src/ui/styles/_footer.scss
@@ -406,7 +406,7 @@ footer{
             .zm-container{
                
               position: absolute;
-              bottom: 6%;
+              bottom: 15px;
               right: auto;
                 display: flex;
                 height: 20%;
