FEAT: input padding

--- a/src/checkout/styles/_checkout.scss
+++ b/src/checkout/styles/_checkout.scss
@@ -67,6 +67,7 @@ h2{
             input{
                 width: 100%;
                 height:5vh;
+                padding-left: 7px;
                 border-radius: 6px;
                 border-color: rgba($color:gray, $alpha:0.4);
             }
