--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -5,6 +5,7 @@
 @import "../ui//styles/shopingCart";
 @import "../ui/styles//mobileNavbar";
 @import "../ui/styles/mobileMenu";
+@import "../ui/styles/loading";
 @import "../home//styles//home1";
 @import "../home//styles//home2";
 @import "../home//styles//home3";
