FEAT: Plan Detox

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -13,6 +13,7 @@
 @import "../home//styles//home4b";
 @import "../home//styles//home5";
 @import"../home//styles/slider";
+@import"../home//styles/promotionalBanner";
 @import "../Plans//styles/plan";
 @import "../Plans//styles/testResult";
 @import "../questonaryTest/styles/questionaryTest";
